...
            TextField("message".localized, text: $state.inputText, axis: .vertical)
                .font(.body)
                .padding(.horizontal, 14)
                .padding(.vertical, 4)
                .textFieldStyle(.plain)
                .tint(.accentColor)
                .accessibilityIdentifier("messageInput")
                .accessibilityLabel("message".localized)
                .focused($isInputFocused)
                .onChange(of: state.inputText) { _, _ in
                    state.calculateTextHeight()
                }
                .frame(height: state.textHeight)
...
